--- a/templates/person.html
+++ b/templates/person.html
@@ -49,15 +49,15 @@
         <img id="curbgimage" src="" alt="img" class="background-image">
     <div class="post">
         <h2 class="post-title">帖子标题</h2>
-        <p>帖子内容</p>
+        <p>帖子时间</p>
     </div>
     <div class="post">
         <h2 class="post-title">帖子标题</h2>
-        <p>帖子内容</p>
+        <p>帖子时间</p>
     </div>
     <div class="post">
         <h2 class="post-title">帖子标题</h2>
-        <p>帖子内容</p>
+        <p>帖子时间</p>
     </div>
 </div>
 </div>
