--- a/templates/home.html
+++ b/templates/home.html
@@ -12,12 +12,10 @@
 <body>
 
 <div class="header">
-  <h2 class="logo">WordTongji</h2>
+  <h2 class="logo"></h2>
   <button class="search-button">首页</button>
   <button class="search-button">帮助</button>
-  <div class="search-container">
-    <input type="text" class="search-box magnifying-glass" placeholder="  请输入搜索内容">
-  </div>
+  <button class="search-button" onclick="logout()">退出登录</button>
   <div style="float: right; margin-top: -50px; margin-right: 20px;">
     <img id="curimage"  src="" alt="img" class="user-avatar">
 </div>
@@ -67,4 +65,22 @@ function updateUserInformation(username) {
         });
 }
 updateUserInformation(username);
+function logout() {
+  fetch('/logout', {
+    method: 'POST',
+    credentials: 'same-origin'  // 保持与当前页面相同的会话
+  })
+  .then(response => {
+    if (response.ok) {
+      // 重定向到登录页面或执行其他操作
+      window.location.href = '/login';
+    } else {
+      // 处理请求失败的情况
+      console.error('退出登录失败');
+    }
+  })
+  .catch(error => {
+    console.error('请求出错:', error);
+  });
+}
 </script>
