--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/base.css">
     <link rel="stylesheet" href="../static/readingWelcomeNav.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>论坛首页</title>
 </head>
 <body>
@@ -50,7 +53,7 @@
                     <h5 class="menuText">我的温馨小家</h5>
                 </a>
             </li>
-    
+
             <li class="menuItem">
                 <a href="#" class="menuOption" type="button">
                     <i class="fa-solid fa-arrow-up iconstyle"></i>
@@ -62,7 +65,7 @@
         <div class="menuUser">
             <a href="#">
                 <div>
-                    <img src="/GGraph/eevee.jpg" alt="">
+                    <img src="../static/logo.png" alt="">
                 </div>
                 <h5 class="Username menuText">Casaruma</h5>
                 <p class="menuText">
