--- a/templates/word_book_choose.html
+++ b/templates/word_book_choose.html
@@ -12,14 +12,14 @@
 <body>
 
 <div class="header">
-  <h2 class="logo">WordTongji</h2>
+  <h2 class="logo"></h2>
   <button class="search-button">首页</button>
   <button class="search-button">帮助</button>
   <div class="search-container">
     <input type="text" class="search-box magnifying-glass" placeholder="  请输入搜索内容">
   </div>
   <div style="float: right; margin-top: -50px; margin-right: 20px;">
-    <img id="curimage"  src="../static/user.jpg" alt="img" class="user-avatar">
+    <img id="curimage"  src="" alt="img" class="user-avatar">
 </div>
 </div>
 <div class="card-container">
@@ -35,3 +35,43 @@
 </div>
 </body>
 </html>
+<script>
+    // 获取要点击的<div>元素
+    var cet4Card = document.querySelector('.card.cet4');
+
+    // 添加点击事件处理程序
+    cet4Card.addEventListener('click', function() {
+        // 在点击事件中执行页面跳转操作
+        window.location.href = '/word_learning';
+    });
+ 
+    var username = "{{ session.get('username', '') }}";
+  document.getElementById('curimage').addEventListener('click', function() {
+      window.location.href = "/personal_web/" + username;
+  });
+// 发起请求以获取用户信息
+function updateUserInformation(username) {
+    fetch('/user_info/' + username)
+        .then(function(response) {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(function(userObj) {
+            var imageElement = document.getElementById('curimage');
+            console.log(imageElement);
+            if (userObj && !userObj.error) {
+                imageElement.src = 'data:image/jpeg;base64,' + userObj.image;
+            }
+            else {
+                // 处理用户信息不存在的情况 也就是默认的值显示为啥
+                imageElement.src = '../static/user.jpg';
+            }
+        })
+        .catch(function(error) {
+            console.error('Error:', error);
+        });
+}
+updateUserInformation(username);
+</script>
