--- a/templates/upload.html
+++ b/templates/upload.html
@@ -109,7 +109,7 @@
         }
 
         // 发送POST请求到后端
-        fetch('/upload', {
+        fetch('/uploadblog', {
           method: 'POST',
           body: formData
         })
